<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_neighbour_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EFF1"
    tools:actionBarNavMode="standard"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity"
    tools:ignore="ExtraText,MissingClass,MissingConstraints"
    tools:layout_editor_absoluteY="81dp">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeDet"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:id="@+id/seeAvatar"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        android:nestedScrollingEnabled="false"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_collapseMode="parallax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/seeProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="236dp"
        android:text="Afficher Nom"

        android:shadowColor="@color/text_shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"






        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFavouriteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="32dp"

        android:clickable="true"
        android:contentDescription="@string/tab_favorites_title"
        android:src="@drawable/ic_star_border_yellow_24dp"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="16dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/seeAvatar"
>


            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"

                android:elevation="16dp"
                app:layout_constraintTop_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:elevation="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seeName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:paddingStart="15dp"
                        android:text="Afficher Nom"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/seeLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:text="Dans le coin"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp"
                        android:textStyle="bold"
                         />

                    <TextView
                        android:id="@+id/seePhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:background="#FFFFFF"
                        android:drawableStart="@drawable/ic_baseline_phone_24"
                        android:paddingStart="16dp"
                        android:drawablePadding="16dp"
                        android:text="  phone_nb"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                    <!--android:gravity="center|left"-->

                    <TextView
                        android:id="@+id/seeContact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_language_24"
                        android:gravity="center|left"
                        android:paddingStart="16dp"
                        android:drawablePadding="16dp"
                        android:text="  www.facebook.fr/AfficherNom"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:elevation="16dp"
                app:layout_constraintTop_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleAboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:text="A propos de moi"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/seeAboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"

                        android:text="Vous dont je suis formé, corps, substance éthérée,
À demeurer unis quel lien vous astreint ?
Hôte d'un globe errant sous la voûte azurée,
Quelle est mon origine et le but qu'elle atteint ?"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="visible" />


                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>




</android.support.constraint.ConstraintLayout>

